--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>My Portfolio</title>
 </head>
 <body>
-  <h1>My Portfolio</h1>
-  <img src="img/NEWYORK.jpg" alt="Photo of me in NYC">
-  <p></p>
+  <h1>Sylvja's Portfolio</h1>
+  <p class="favoritequote">"Not everything that is faced can be changed, but nothing can be changed until it is faced". -James Baldwin</p>
+  <p class=image><img src="img/NEWYORK.jpg" alt="Photo of me in NYC"></p>
+  <h2>About Myself:</h2>
+  <p class="aboutme">Hi there, my name is Sylvja and I have a true passion for traveling around the world. Through my travels I have been able to learn a number of languages and aspirations I have for my life. Currently, i am enrolled at Epicodus which is a coding bootcamp, I chose to attend a coding bootcamp because I strive to continuosly learn new skills that could benefit me in life. I find coding to be an important skill because it allows you to understand the dynamic language used to design websites and apps you view in everyday life. My current goal is to pass the Epicodus bootcamp couse to be able work within the tech field and help friends by desiging their personal websites. </p>
 </body>
