--- a/index.html
+++ b/index.html
@@ -7,33 +7,39 @@
 <body>
 
   <h1>Sylvja's Portfolio</h1>
-  <p class="favoritequote">"Not everything that is faced can be changed, but nothing can be changed until it is faced". -James Baldwin</p>
+  <p class="favoritequote"><em>"Not everything that is faced can be changed, but nothing can be changed until it is faced".</em> -James Baldwin</p>
   <img src="img/NEWYORK.jpg" alt="Photo of me in NYC">
   <h2>About Myself:</h2>
-  <p class="aboutme">Hi there, my name is Sylvja and I have a true passion for traveling around the world. Through my travels I have been able to learn a number of languages and aspirations I have for my life. Currently, i am enrolled at Epicodus which is a coding bootcamp, I chose to attend a coding bootcamp because I strive to continuosly learn new skills that could benefit me in life. I find coding to be an important skill because it allows you to understand the dynamic language used to design websites and apps you view in everyday life. My current goal is to pass the Epicodus bootcamp couse to be able work within the tech field and help friends by desiging their personal websites. </p>
+  <p class="aboutme">Hi there, my name is <span class="name">Sylvja</span> and I have a true passion for traveling around the world. Through my travels I have been able to learn a number of languages and aspirations I have for my life. Currently, i am enrolled at Epicodus which is a coding bootcamp, I chose to attend a coding bootcamp because I strive to continuosly learn new skills that could benefit me in life. I find coding to be an important skill because it allows you to understand the dynamic language used to design websites and apps you view in everyday life. My current goal is to pass the Epicodus bootcamp couse to be able work within the tech field and help friends by desiging their personal websites. </p>
   <h3>Projects Worked on at Epicodus:</h3>
   <div class="projectlist">
   <ol>
     <div class="githublink">
-    <li><a href="https://github.com/sylvjaz/Favorite-Places">Favorite Places Website</a></li>
+    <li>
+    <a href="https://github.com/sylvjaz/Favorite-Places">Favorite Places Website</a>
+    </li>
     </div>
       <ul>
-        <li>A website about the best places around the world usihng HTML and CSS coding. The project was a collaboartion with Mikey Kriegel and shares a contribution of our favorite places of the globe. The website shares links to official websites of each country. </li>
+        <li>A website about the best places around the world usihng HTML and CSS coding. The project was a collaboartion with Mikey Kriegel and shares a contribution of our favorite places of the globe. The website shares links to official websites of each country.</li>
       </ul>
     <div class="githublink">
-    <li><a href="https://github.com/sylvjaz/Heaven-Cupcakes">Heaven Cupcakes</a></li>
-      <ul>
-    </div>
-        <li>A website dedicated to a make-believe cupcake shop in the Portland, Oregon area. The website made using HTML and CSS coding. The website was another collaboartion with Mikey Kriegel, we fairly enjoyed the project and being able to try out new forms of code.
-       </li>
-     </ul>
-  <div class="githublink">
-    <li><a href="https://github.com/sylvjaz/Pets">Pets</a></li>
+    <li>
+      <a href="https://github.com/sylvjaz/Heaven-Cupcakes">Heaven Cupcakes</a></li>
   </div>
-      <ul>
-       <li>A website at the very begining of my understanding of coding that uses HTML. The website shares the differnt types of cat and dog breeds that I believe are the best. The website was created by Mikey Kriegel and myself.
+    <ul>
+      <li>A website dedicated to a make-believe cupcake shop in the Portland, Oregon area. The website made using HTML and CSS coding. The website was another collaboartion with Mikey Kriegel, we fairly enjoyed the project and being able to try out new forms of code.</li>
      </ul>
+   <div class="githublink">
+   <li>
+    <a href="https://github.com/sylvjaz/Pets">Pets</a>
+   </li>
+  </div>
+  <ul>
+   <li>A website at the very begining of my understanding of coding that uses HTML. The website shares the differnt types of cat and dog breeds that I believe are the best. The website was created by Mikey Kriegel and myself.</li>
+ </ul>
+    </ol>
   </div>
   </ol>
-  </p>
+  <h4>My background:</h4>
+
 </body>
