It will have a styled hyperlink to college webpage

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <h3>Projects Worked on at Epicodus:</h3>
   <div class="projectlist">
   <ol>
-    <div class="githublink">
+  <div class="githublink">
     <li>
     <a href="https://github.com/sylvjaz/Favorite-Places">Favorite Places Website</a>
     </li>
-    </div>
+  </div>
       <ul>
         <li>A website about the best places around the world usihng HTML and CSS coding. The project was a collaboartion with Mikey Kriegel and shares a contribution of our favorite places of the globe. The website shares links to official websites of each country.</li>
       </ul>
@@ -27,19 +27,22 @@
       <a href="https://github.com/sylvjaz/Heaven-Cupcakes">Heaven Cupcakes</a></li>
   </div>
     <ul>
-      <li>A website dedicated to a make-believe cupcake shop in the Portland, Oregon area. The website made using HTML and CSS coding. The website was another collaboartion with Mikey Kriegel, we fairly enjoyed the project and being able to try out new forms of code.</li>
+    <li>A website dedicated to a make-believe cupcake shop in the Portland, Oregon area. The website made using HTML and CSS coding. The website was another collaboartion with Mikey Kriegel, we fairly enjoyed the project and being able to try out new forms of code.</li>
      </ul>
-   <div class="githublink">
+  <div class="githublink">
    <li>
     <a href="https://github.com/sylvjaz/Pets">Pets</a>
    </li>
   </div>
   <ul>
-   <li>A website at the very begining of my understanding of coding that uses HTML. The website shares the differnt types of cat and dog breeds that I believe are the best. The website was created by Mikey Kriegel and myself.</li>
- </ul>
-    </ol>
+  <li>A website at the very begining of my understanding of coding that uses HTML. The website shares the differnt types of cat and dog breeds that I believe are the best. The website was created by Mikey Kriegel and myself.</li>
+  </ul>
+  </ol>
   </div>
   </ol>
   <h4>My background:</h4>
+  <p>Educational Background</p>
+  <li> My college years were spent reaserching through independent projects at  <a href ="https://www.evergreen.edu/"><span class="college">The Evergreen State College</a></span> in Olympia, Washington. I spent four years studying gender and sexuality dynamics through an anthropological lens. My research was in the field through traveling to Brazil, Taiwan, and Europe and referrencing texts written by anthroplogist suchs as: Margaret Mead, Michelle Rosaldo, and Nancy Scheper-Hughes. At a young age I became a fan of Chinese culture, I was 13 when I began my studies of Mandarin-Chinese which led me to getting a minor in Chinese language. I have yet to visit China, it's of course on my travel list. But I did spend a chunk of time in Taipei, Taiwan where I was able to practice my language skills extensively.</li>
+ 
 
 </body>
