It will have have floats for work experience

--- a/index.html
+++ b/index.html
@@ -34,15 +34,28 @@
     <a href="https://github.com/sylvjaz/Pets">Pets</a>
    </li>
   </div>
-  <ul>
+     <ul>
   <li>A website at the very begining of my understanding of coding that uses HTML. The website shares the differnt types of cat and dog breeds that I believe are the best. The website was created by Mikey Kriegel and myself.</li>
-  </ul>
+    </ul>
   </ol>
   </div>
   </ol>
-  <h4>My background:</h4>
+  <h4>My Background:</h4>
+<div class= "subheader">
   <p>Educational Background</p>
-  <li> My college years were spent reaserching through independent projects at  <a href ="https://www.evergreen.edu/"><span class="college">The Evergreen State College</a></span> in Olympia, Washington. I spent four years studying gender and sexuality dynamics through an anthropological lens. My research was in the field through traveling to Brazil, Taiwan, and Europe and referrencing texts written by anthroplogist suchs as: Margaret Mead, Michelle Rosaldo, and Nancy Scheper-Hughes. At a young age I became a fan of Chinese culture, I was 13 when I began my studies of Mandarin-Chinese which led me to getting a minor in Chinese language. I have yet to visit China, it's of course on my travel list. But I did spend a chunk of time in Taipei, Taiwan where I was able to practice my language skills extensively.</li>
- 
+</div>
+  <li> My university years were spent reaserching at  <a href ="https://www.evergreen.edu/"><span class="college">The Evergreen State College</a></span> in Olympia, Washington. I spent four years conducting indepedent projects on the topic of: G  ender and Sexuality through an anthropological and sociological lens. My research allowed me to be extensively in the field by traveling to Brazil, Taiwan, and Europe and referrencing texts written by anthroplogist suchs as: Margaret Mead, Michelle Rosaldo, and Nancy Scheper-Hughes. At a young age I became a fan of Chinese culture, I was 13 when I began my studies of Mandarin-Chinese which led me to getting a minor in Chinese language. I have yet to visit China, it's of course on my travel list. But I did spend a chunk of time in Taipei, Taiwan where I was able to practice my language skills extensively.</li>
+<div class= "subheader">
+ <p>Work Experience</p>
+</div>
+ <div class="column">
+  <li>Vacasa: CX Agent
+    <ul>August 2019-April-2020</ul>
+  </li>
+  <li>Voodoo Donuts: Cashier and Baker
+    <ul>February 2019-July 2019</ul>
+  </li>
+</div>
+
 
 </body>
