Updated content on portfolio

--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
  <div class="column">
   <li>Vacasa: CX Agent
     <ul>-August 2019-April-2020</ul>
+    <ul>-Worked within custoemr relations helping guests troubleshoot issues in their vacation rentals, using Vacasa's software design and collaborating with co-workers to find ways to grow and develop as a team.</ul>
   </li>
   <li>Voodoo Donuts: Cashier and Baker
     <ul>-February 2019-July 2019</ul>
+      <ul>-Worked with customers on deciding which delicious donuts they wanted to eat. Learned how to bake and decorate donuts. Skills gained were in culintary and communication.</ul>
   </li>
-  </div>
+ </div>
 </body>
 </html>
