--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>My Portfolio</title>
 </head>
 <body>
-
-  <h1><strong>Sylvja's Portfolio</strong></h1>
+ <h1><strong>Sylvja's Portfolio</strong></h1>
   <p class="favoritequote"><em>"Not everything that is faced can be changed, but nothing can be changed until it is faced".</em> -James Baldwin</p>
   <img src="img/NEWYORK.jpg" alt="Photo of me in NYC" class="center">
   <h2><u>About Myself:</u></h2>
@@ -24,11 +23,13 @@
         <li><strong>A website about the best places around the world usihng HTML and CSS coding. The project was a collaboartion with Mikey Kriegel and shares a contribution of our favorite places of the globe. The website shares links to official websites of each country.</strong></li>
       </ul>
     <div class="githublink">
-    <li>
-      <a href="https://github.com/sylvjaz/Heaven-Cupcakes">Heaven Cupcakes</a></li>
+      <li>
+        <a href="https://github.com/sylvjaz/Heaven-Cupcakes">Heaven Cupcakes</a>
+      </li>
   </div>
     <ul>
-    <li><strong>A website dedicated to a make-believe cupcake shop in the Portland, Oregon area. The website made using HTML and CSS coding. The website was another collaboartion with Mikey Kriegel, we fairly enjoyed the project and being able to try out new forms of code.</strong></li>
+      <li><strong>A website dedicated to a make-believe cupcake shop in the Portland, Oregon area. The website made using HTML and CSS coding. The website was another collaboartion with Mikey Kriegel, we fairly enjoyed the project and being able to try out new forms of code.</strong>
+      </li>
      </ul>
   <div class="githublink">
    <li>
@@ -36,11 +37,11 @@
    </li>
   </div>
      <ul>
-  <li><strong>A website at the very begining of my understanding of coding that uses HTML. The website shares the differnt types of cat and dog breeds that I believe are the best. The website was created by Mikey Kriegel and myself.</strong></li>
+      <li><strong>A website at the very begining of my understanding of coding that uses HTML. The website shares the differnt types of cat and dog breeds that I believe are the best. The website was created by Mikey Kriegel and myself.</strong>
+     </li>
     </ul>
-  </ol>
+   </ol>
   </div>
-  </ol>
   <h4><u>My Background:</u></h4>
   <div class= "subheader">
   <p>Educational Background:</p>
@@ -54,14 +55,15 @@
  <p>Work Experience</p>
  </div>
  <div class="column">
-  <li>Vacasa: CX Agent
-    <ul>-August 2019-April-2020</ul>
-    <ul>-Worked within custoemr relations helping guests troubleshoot issues in their vacation rentals, using Vacasa's software design and collaborating with co-workers to find ways to grow and develop as a team.</ul>
+  <li><a href="https://www.vacasa.com/">Vacasa:</a> CX Agent</li>
+   <ul>-August 2019-April-2020</ul>
+     <ul>-Worked within customer relations by helping guests troubleshoot issues in their vacation rentals. Used Vacasa's software database and collaborated with co-workers to problem-solve and develop as a team.
+   </ul>
+  <li><a href="https://www.voodoodoughnut.com/">Voodoo Doughnuts:</a> Cashier & Baker
   </li>
-  <li>Voodoo Donuts: Cashier and Baker
     <ul>-February 2019-July 2019</ul>
-      <ul>-Worked with customers on deciding which delicious donuts they wanted to eat. Learned how to bake and decorate donuts. Skills gained were in culintary and communication.</ul>
-  </li>
+      <ul>-Worked with customers on deciding which delicious donuts they wanted to eat. Learned how to bake and decorate donuts. Skills gained were in culintary and communication.
+  </ul>
  </div>
 </body>
 </html>
