--- a/index.html
+++ b/index.html
@@ -5,32 +5,29 @@
   <title>My Portfolio</title>
 </head>
 <body>
- <h1><strong>Sylvja's Portfolio</strong></h1>
+  <h1><strong>Sylvja's Portfolio</strong></h1>
   <p class="favoritequote"><em>"Not everything that is faced can be changed, but nothing can be changed until it is faced".</em> -James Baldwin</p>
   <img src="img/NEWYORK.jpg" alt="Photo of me in NYC" class="center">
   <h2><u>About Myself:</u></h2>
-  <p class="aboutme">Hi there, my name is <span class="name">Sylvja</span> and I have a true passion for traveling around the world. Through my travels I have been able to learn a number of languages and aspirations I have for my life. Currently, i am enrolled at Epicodus which is a coding bootcamp, I chose to attend a coding bootcamp because I strive to continuosly learn new skills that could benefit me in life. I find coding to be an important skill because it allows you to understand the dynamic language used to design websites and apps you view in everyday life. My current goal is to pass the Epicodus bootcamp couse to be able work within the tech field and help friends by desiging their personal websites. </p>
+  <p class="aboutme">Hi there, my name is <span class="name">Sylvja</span> and I have a true passion for traveling around the world. Through my travels I have been able to learn a number of languages and aspirations I have for my life. Currently, i am enrolled at Epicodus which is a coding bootcamp, I chose to attend a coding bootcamp because I strive to continuosly learn new skills that could benefit me in life. I find coding to be an important skill because it allows you to understand the dynamic language used to design websites and apps you view in everyday life. My current goal is to pass the Epicodus bootcamp couse to be able work within the tech field and help friends by desiging their personal websites.</p>
   <p>I have a variety of <b>hobbies</b> that include reading history books, I love the subjects of the roaring 20s; viewing art of Louis XIV's kingdom and creations. When I get the time I love boarding a flight to a new place, I have a long list of destinations that are a must see in my lifetime. When I am in my apartment I constantly am searching for new music, I love the classics, hip-hop, and house music are mainly what you hear blaring from my speakers. When I am not listening to music I am drinking a warm cup of coffee over small-talk with a couple of my girlfriends. Last I have to share my biggest passion of them all...I love fashion and it's a subject I can talk about for hours.</p>
   <h3><u>Projects Worked on at Epicodus:</u></h3>
-  <div class="projectlist">
+ <div class="projectlist">
   <ol>
-  <div class="githublink">
-    <li>
-    <a href="https://github.com/sylvjaz/Favorite-Places">Favorite Places Website</a>
-    </li>
+ <div class="githublink">
+  <li><a href="https://github.com/sylvjaz/Favorite-Places">Favorite Places Website</a> </li>
   </div>
       <ul>
         <li><strong>A website about the best places around the world usihng HTML and CSS coding. The project was a collaboartion with Mikey Kriegel and shares a contribution of our favorite places of the globe. The website shares links to official websites of each country.</strong></li>
       </ul>
-    <div class="githublink">
+  <div class="githublink">
       <li>
         <a href="https://github.com/sylvjaz/Heaven-Cupcakes">Heaven Cupcakes</a>
       </li>
   </div>
     <ul>
-      <li><strong>A website dedicated to a make-believe cupcake shop in the Portland, Oregon area. The website made using HTML and CSS coding. The website was another collaboartion with Mikey Kriegel, we fairly enjoyed the project and being able to try out new forms of code.</strong>
-      </li>
-     </ul>
+      <li><strong>A website dedicated to a make-believe cupcake shop in the Portland, Oregon area. The website made using HTML and CSS coding. The website was another collaboartion with Mikey Kriegel, we fairly enjoyed the project and being able to try out new forms of code.</strong></li>
+    </ul>
   <div class="githublink">
    <li>
     <a href="https://github.com/sylvjaz/Pets">Pets</a>
@@ -44,7 +41,7 @@
   </div>
   <h4><u>My Background:</u></h4>
   <div class= "subheader">
-  <p>Educational Background:</p>
+    <p>Educational Background:</p>
   </div>
   <p> My university years were spent reaserching at  <a href ="https://www.evergreen.edu/"><span class="college">The Evergreen State College</a></span> in Olympia, Washington. I spent four years conducting indepedent projects on the topic of: G  ender and Sexuality through an anthropological and sociological lens. My research allowed me to be extensively in the field by traveling to Brazil, Taiwan, and Europe and referrencing texts written by anthroplogist suchs as: Margaret Mead, Michelle Rosaldo, and Nancy Scheper-Hughes. At a young age I became a fan of Chinese culture, I was 13 when I began my studies of Mandarin-Chinese which led me to getting a minor in Chinese language. I have yet to visit China, it's of course on my travel list. But I did spend a chunk of time in Taipei, Taiwan where I was able to practice my language skills extensively.<p>
   <div class= "subheader">
@@ -52,18 +49,17 @@
   </div>
     <p>I want to puruse an understanding of coding because code simply is the language of computers. I have a fascination for different languages and code is one that is used to develop websites and used amongst those that have a fundamental understanding of code. I love the web and I want to be able to understand the context that goes behind webpage and application design on a deeper level. I chose to go through a bootcamp to gain the skills I need to be able to translate or write code. Code is an evolving language and one that has a large part of the future ahead of us.</p>
  <div class= "subheader">
- <p>Work Experience</p>
+  <p>Work Experience</p>
  </div>
  <div class="column">
   <li><a href="https://www.vacasa.com/">Vacasa:</a> CX Agent</li>
    <ul>-August 2019-April-2020</ul>
      <ul>-Worked within customer relations by helping guests troubleshoot issues in their vacation rentals. Used Vacasa's software database and collaborated with co-workers to problem-solve and develop as a team.
    </ul>
-  <li><a href="https://www.voodoodoughnut.com/">Voodoo Doughnuts:</a> Cashier & Baker
-  </li>
+  <li><a href="https://www.voodoodoughnut.com/">Voodoo Doughnuts:</a> Cashier & Baker</li>
     <ul>-February 2019-July 2019</ul>
       <ul>-Worked with customers on deciding which delicious donuts they wanted to eat. Learned how to bake and decorate donuts. Skills gained were in culintary and communication.
-  </ul>
- </div>
+    </ul>
+  </div>
 </body>
 </html>
