--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <h1><strong>Sylvja's Portfolio</strong></h1>
   <p class="favoritequote"><em>"Not everything that is faced can be changed, but nothing can be changed until it is faced".</em> -James Baldwin</p>
   <img src="img/NEWYORK.jpg" alt="Photo of me in NYC" class="center">
-  <h2><u>About Myself:</u></h2>
+  <h2><u>About Me:</u></h2>
   <p class="aboutme">Hi there, my name is <span class="name">Sylvja</span> and I have a true passion for traveling around the world. Through my travels I have been able to learn a number of languages and aspirations I have for my life. Currently, i am enrolled at Epicodus which is a coding bootcamp, I chose to attend a coding bootcamp because I strive to continuosly learn new skills that could benefit me in life. I find coding to be an important skill because it allows you to understand the dynamic language used to design websites and apps you view in everyday life. My current goal is to pass the Epicodus bootcamp couse to be able work within the tech field and help friends by desiging their personal websites.</p>
   <p>I have a variety of <b>hobbies</b> that include reading history books, I love the subjects of the roaring 20s; viewing art of Louis XIV's kingdom and creations. When I get the time I love boarding a flight to a new place, I have a long list of destinations that are a must see in my lifetime. When I am in my apartment I constantly am searching for new music, I love the classics, hip-hop, and house music are mainly what you hear blaring from my speakers. When I am not listening to music I am drinking a warm cup of coffee over small-talk with a couple of my girlfriends. Last I have to share my biggest passion of them all...I love fashion and it's a subject I can talk about for hours.</p>
-  <h3><u>Projects Worked on at Epicodus:</u></h3>
+  <h2><u>Projects Worked on at Epicodus:</u></h2>
  <div class="projectlist">
   <ol>
  <div class="githublink">
@@ -39,9 +39,9 @@
     </ul>
    </ol>
   </div>
-  <h4><u>My Background:</u></h4>
+  <h2><u>My Background:</u></h4>
   <div class= "subheader">
-    <p>Educational Background:</p>
+    <p>Education:</p>
   </div>
   <p> My university years were spent reaserching at  <a href ="https://www.evergreen.edu/"><span class="college">The Evergreen State College</a></span> in Olympia, Washington. I spent four years conducting indepedent projects on the topic of: G  ender and Sexuality through an anthropological and sociological lens. My research allowed me to be extensively in the field by traveling to Brazil, Taiwan, and Europe and referrencing texts written by anthroplogist suchs as: Margaret Mead, Michelle Rosaldo, and Nancy Scheper-Hughes. At a young age I became a fan of Chinese culture, I was 13 when I began my studies of Mandarin-Chinese which led me to getting a minor in Chinese language. I have yet to visit China, it's of course on my travel list. But I did spend a chunk of time in Taipei, Taiwan where I was able to practice my language skills extensively.<p>
   <div class= "subheader">
