--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <p class="favoritequote"><em><q>Not everything that is faced can be changed, but nothing can be changed until it is faced.</q></em> -James Baldwin</p>
   <img src="img/NEWYORK.jpg" alt="Photo of me in NYC" class="center">
   <h2><u>About Me:</u></h2>
-  <p class="aboutme">Hi there, my name is <span class="name">Sylvja</span> and I have a true passion for traveling around the world. Through my travels I have been able to learn a number of languages and aspirations I have for my life. Currently, i am enrolled at Epicodus which is a coding bootcamp, I chose to attend a coding bootcamp because I strive to continuosly learn new skills that could benefit me in life. I find coding to be an important skill because it allows you to understand the dynamic language used to design websites and apps you view in everyday life. My current goal is to pass the Epicodus bootcamp couse to be able work within the tech field and help friends by desiging their personal websites.</p>
-  <p>I have a variety of <b>hobbies</b> that include reading history books, I love the subjects of the roaring 20s; viewing art of Louis XIV's kingdom and creations. When I get the time I love boarding a flight to a new place, I have a long list of destinations that are a must see in my lifetime. When I am in my apartment I constantly am searching for new music, I love the classics, hip-hop, and house music are mainly what you hear blaring from my speakers. When I am not listening to music I am drinking a warm cup of coffee over small-talk with a couple of my girlfriends. Last I have to share my biggest passion of them all...I love fashion and it's a subject I can talk about for hours.</p>
+  <p class="aboutme">Hi there, my name is <span class="name">Sylvja</span> and I have a true passion for traveling around the world. Through my travels I have been able to learn a number of languages and aspirations I have for my life. Currently, i am enrolled at Epicodus which is a coding bootcamp, I chose to attend a coding bootcamp because I strive to continuosly learn new skills that could benefit me in life. I find coding to be an important skill because it allows you to understand the dynamic language used to design websites and apps viewed in everyday life. My current goal is to pass the Epicodus bootcamp couse to be able work within the tech field and help friends by desiging their personal websites.</p>
+  <p>I have a variety of <b>hobbies</b> that include reading history books, I love the subjects of the roaring 20s; viewing art of Louis XIV's kingdom and creations. When I get the time I love boarding a flight to a new place, I have a long list of destinations that are a must see in my lifetime. When I am in my apartment I constantly am searching for new music, I love the Classics, Hip-Hop, and House music are mainly what you'll hear blaring from my speakers. When I am not listening to music you'll find me drinking a warm cup of coffee over small-talk with a couple of my friends. Last, I have to share my biggest passion of them all...I love fashion and it's a subject I can talk about for hours.</p>
   <h2><u>Projects Worked on at Epicodus:</u></h2>
  <div class="projectlist">
   <ol>
@@ -58,7 +58,7 @@
    </ul>
   <li><a href="https://www.voodoodoughnut.com/">Voodoo Doughnuts:</a> Cashier & Baker</li>
     <ul>-February 2019-July 2019</ul>
-      <ul>-Worked with customers on deciding which delicious donuts they wanted to eat. Learned how to bake and decorate donuts. Skills gained were in culintary and communication.
+      <ul>-Worked with customers on deciding which delicious donuts they wished to eat. Learned how to bake and decorate donuts. Skills gained were in culintary and communication.
     </ul>
   </div>
 </body>
