Added github link to README.MD

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>My Portfolio</title>
 </head>
@@ -60,6 +61,6 @@
     <ul>-February 2019-July 2019</ul>
       <ul>-Worked with customers on deciding which delicious donuts they wished to eat. Learned how to bake and decorate donuts. Skills gained were in culintary and communication.
     </ul>
-  </div>
+ </div>
 </body>
 </html>
